ReadMe File and Fixed FireFox OverFlow

--- a/src/styles/Components_Modules/Form.module.scss
+++ b/src/styles/Components_Modules/Form.module.scss
@@ -26,14 +26,14 @@ form {
     align-self: center;
     font-size: 3em;
   }
-  input[type='text'] {
+  input[type="text"] {
     transition: all 1s ease;
     margin: 1em;
     font-size: 1.5rem;
     padding: 0.5em;
     font-weight: bolder;
   }
-  input[type='text']:focus {
+  input[type="text"]:focus {
     margin: 2em;
     border: none;
   }
@@ -56,7 +56,10 @@ form {
       width: 70%;
       padding: 0.5rem;
     }
-    input[type='text']:focus {
+    input[type="text"] {
+      width: 70%;
+    }
+    input[type="text"]:focus {
       margin: 2em 0;
     }
   }
