--- a/src/styles/Components_Modules/SearchWeather.module.scss
+++ b/src/styles/Components_Modules/SearchWeather.module.scss
@@ -5,14 +5,14 @@
 .search {
   position: relative;
   display: grid;
-  background: url('../../image/asdsa.webp') repeat center center/cover;
+  background: url("../../image/asdsa.webp") repeat center center/cover;
   background-color: #f4f8fb;
   width: 100%;
   max-height: 900px;
   text-align: center;
   z-index: 1;
   &::after {
-    content: '';
+    content: "";
     position: absolute;
     top: 0%;
     left: 0%;
@@ -27,7 +27,6 @@
 .CityName {
   border: 2px solid #f4f4f4;
   background-color: #214074;
-  display: flex;
   padding: 2em;
   margin-bottom: 3.5em;
 }
@@ -42,7 +41,6 @@
   }
   .CityName {
     color: aliceblue;
-    flex-direction: column;
     padding: 0;
     margin-bottom: 1.5em;
   }
